--- a/_includes/read-time.html
+++ b/_includes/read-time.html
@@ -1,3 +1,4 @@
 {% assign wpm = site.words_per_minute | append: '.0' %}
-{% assign readtime = content | strip_html | number_of_words %}
-预计阅读时间 ~{% if readtime <= 1 %}1 minute{% else %}{{ readtime }} minutes{% endif %}
+{% assign readtime = content | strip_html | number_of_words | divided_by:wpm | round %}
+Reading time ~{% if readtime <= 1 %}1 minute{% else %}{{ readtime }} minutes{% endif %}
+预计阅读时间 ~{% if readingtime <= 1 %}1 分钟{% else %}{{ readingtime }} 分钟{% endif %}
