MOD: test reading time

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,10 +35,13 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/about">
                          About
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/posts">
+                         <a class="btn zoombtn" href="{{ site.url }}/tags">
                          Posts
                          </a>
+                         <!--
                          <a class="btn zoombtn" href="{{ site.url }}/projects">
+                         -->
+                         <a class="btn zoombtn" href="https://github.com/sybil63">
                          Projects
                          </a>
                  </h3>
