--- a/_includes/read-time.html
+++ b/_includes/read-time.html
@@ -1,4 +1,4 @@
 {% assign wpm = site.words_per_minute | append: '.0' %}
 {% assign readtime = content | strip_html | number_of_words | divided_by:wpm | round %}
 Reading time ~{% if readtime <= 1 %}1 minute{% else %}{{ readtime }} minutes{% endif %}
-预计阅读时间 ~{% if post.readingtime <= 1 %}1 分钟{% else %}{{ post.readingtime }} 分钟{% endif %}
+预计阅读时间 ~{% if page.readingtime <= 1 %}1 分钟{% else %}{{ page.readingtime }} 分钟{% endif %}
