--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -26,9 +26,9 @@ layout: compress
                         {% if post.project == null %}
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
-                            <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }} {{post.date | date_to_string}}</a>
+                            <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
                             <p>{{ post.excerpt }}</p>
-                            <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">Read More</a>
+                            <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">Read More</a>  {{post.date | date_to_string}}
                         </li>
                     </ul>
                         {% endif %}
