--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,7 @@ layout: compress
                       {% include read-time.html %}
                     </p><!-- /.entry-reading-time -->
                     {% endif %}
+                    {% include tags.html %}
                     {% if page.project %}
                     <a class="btn zoombtn" href="{{site.url}}/projects/">
                     {% else %}
@@ -38,7 +39,25 @@ layout: compress
                 </div>
             </div>
         </div>
-        {% if page.comments and site.disqus_shortname %}<section id="disqus_thread" class="animated fadeInUp"></section><!-- /#disqus_thread -->{% endif %}
+        {% if page.comments and site.disqus_shortname %}
+        <section id="disqus_thread" class="animated fadeInUp">
+            <div id = "gitmentcontainer"></div>
+        </section><!-- /#disqus_thread -->
+        <link rel="stylesheet" href="{{site.url}}/assets/css/gitment.css">
+        <script src="{{site.url}}/assets/js/gitment.js"></script>
+        <script>
+var gitment = new Gitment({
+    id: '{{page.date}}',
+    owner: 'sybil63',
+    repo: 'gitmentStore',
+    oauth: {
+        client_id: '3063c14e92502cc22e6f',
+        client_secret: 'ff293ed8cd9acbfe2fcf871fb67fefffd2145dde',
+    },
+});
+gitment.render('gitmentcontainer');
+        </script>
+        {% endif %}
     </header>
     {% include scripts.html %}
     {% if site.mathjax == true %}
